# ModelGuard

./: .flake8  pyproject.toml  requirements.txt
lambdas/: post_search_by_regex.py  put_artifact_update.py
src/: settings.py
src/aws/: clients.py
src/metrics/: code_quality_metric.py  metric.py
src/storage/: file_extraction.py
src/utils/: llm_analysis.py
tests/: conftest.py
tests/metrics/: test_code_quality_metric.py
